--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -6,7 +6,7 @@
       "name": "colab_setup.ipynb",
       "provenance": [],
       "mount_file_id": "1Ls9rPHOB4zcDTHVseQfKy5uvFrX7Wcba",
-      "authorship_tag": "ABX9TyO+nbdJunjvs5EiD1tRzebe"
+      "authorship_tag": "ABX9TyO4OHrQFbhpy5EMD2dmT5fs"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,7 +19,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,7 +57,7 @@
         },
         "outputId": "d2c2163b-6eb4-41aa-b2be-933ae6393776"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "id": "oPcmxvjW2uLt",
         "outputId": "090776ca-4ab3-4de8-8a00-00aba91e5dea"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
         "id": "ZwLZur3Gokcy",
         "outputId": "2ef0f14b-9acf-4cd5-f7a0-fe1f5e1c420f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
         "id": "To5DCun2pjk6",
         "outputId": "cfb493b4-6e35-446b-de94-d1861338a401"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +424,7 @@
       "metadata": {
         "id": "MeXJG0soJzfS"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +472,7 @@
           "height": 252
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -486,6 +486,86 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#test"
+      ],
+      "metadata": {
+        "id": "XDdnrrqfLhkZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install numpyencoder\n",
+        "import numpyencoder"
+      ],
+      "metadata": {
+        "id": "B5581EboLqMm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install numpy\n",
+        "import numpy"
+      ],
+      "metadata": {
+        "id": "ALqVMv8tLrJ-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "print(\"TensorFlow version:\", tf.__version__)"
+      ],
+      "metadata": {
+        "id": "O6bvVGRwLvtX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install http://storage.googleapis.com/tensorflow-serving-apt/pool/tensorflow-model-server-1.15.0/t/tensorflow-model-server/tensorflow-model-server_1.15.0_all.deb\n"
+      ],
+      "metadata": {
+        "id": "aJaThAIHLz0a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install tensorflow==1.5\n"
+      ],
+      "metadata": {
+        "id": "RkXaJ6AsL7au"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3 \"main.py\"\n"
+      ],
+      "metadata": {
+        "id": "eci-fve1L71u"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
